# IoT

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
client/: CMakeLists.txt
client/include/: connection.h
client/src/: connection.c  main.c
client/test/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: allocator.h  binary_tree.h  btree.h  error.h  list.h  logger.h  queue.h  types.h  xml_parser.h
lib/src/: binary_tree.c  btree.c  list.c  logger.c  queue.c  xml_parser.c
lib/test/: CMakeLists.txt  lib_btree_test.c  lib_list_test.c  lib_que_test.c  lib_xmlparser_test.c
lib/test/files/: simple.xml  test.xml
server/: CMakeLists.txt
server/include/: server.h
server/src/: main.c  server.c
server/test/: CMakeLists.txt  simple_test.c
